# PROAV

./: CMakeLists.txt
bataille_navale/: bataille_navale.cpp  bataille_navale.h  main.cpp
bataille_navale_tableau/: battleship.cpp  battleship.h  game.cpp
battleship/: player.cpp
function_minimization/: main.cpp  minim_main.cpp
hello/: hello.cpp
include/: ndvector.h  vector.h
stupid_game/: main.cpp
stupid_games/: find_num.cpp
